# zap

./: .gitignore  .stylelintrc.json  CHANGELOG.md  Cargo.toml  README.md  bun.nix  flake.nix  package.json  release-please-config.json
.github/workflows/: ci.yml  nix.yml  promote.yml  release-please.yml  release.yml
crates/zap-core/: Cargo.toml
crates/zap-core/src/: fuzzy.rs  icons.rs  lib.rs  usage.rs
crates/zap-plugin-apps/: Cargo.toml
crates/zap-plugin-apps/src/: indexer.rs  lib.rs  search.rs
crates/zap-plugin-apps/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/zap-plugin-calc/: Cargo.toml
crates/zap-plugin-calc/src/: eval.rs  lib.rs  timezone.rs  units.rs
crates/zap-plugin-clipboard/: Cargo.toml
crates/zap-plugin-clipboard/src/: lib.rs  monitor.rs  search.rs  store.rs
crates/zap-plugin-commands/: Cargo.toml
crates/zap-plugin-commands/src/: commands.rs  lib.rs
crates/zap-plugin-commands/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/zap-plugin-emoji/: Cargo.toml
crates/zap-plugin-emoji/src/: data.rs  lib.rs  pins.rs
crates/zap-plugin-websearch/: Cargo.toml
crates/zap-plugin-websearch/src/: engines.rs  lib.rs
crates/zap-plugin-windows/: Cargo.toml
crates/zap-plugin-windows/src/: lib.rs  monitor.rs  search.rs
crates/zap-plugin-windows/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: PLUGINS.md  TODO.md  VISION.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  indexer.rs  lib.rs  main.rs  search.rs
src-tauri/src/platform/: mod.rs
src/lib/: GridView.svelte  ResultItem.svelte  ResultList.svelte  SearchBar.svelte  actions.ts  bindings.ts  keys.ts  tauri.ts
src/routes/: +page.svelte
