[package]
name = "zap"
version = "0.1.0"
description = "A cross-platform application launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "zap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
compact_str = { version = "0.8", features = ["serde"] }
parking_lot = "0.12"
nucleo-matcher = "0.3"
dirs = "6"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
rmp-serde = "1"
tauri-plugin-global-shortcut = "2"
percent-encoding = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
