[package]
name = "zap"
version = "0.1.0"
description = "A cross-platform application launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "zap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zap-core = { path = "../crates/zap-core" }
zap-plugin-apps = { path = "../crates/zap-plugin-apps" }
zap-plugin-calc = { path = "../crates/zap-plugin-calc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
parking_lot = "0.12"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
percent-encoding = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
