[package]
name = "zap"
version = "0.1.4" # x-release-please-version
description = "A cross-platform application launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "zap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zap-core = { path = "../crates/zap-core" }
zap-plugin-apps = { path = "../crates/zap-plugin-apps" }
zap-plugin-calc = { path = "../crates/zap-plugin-calc" }
zap-plugin-clipboard = { path = "../crates/zap-plugin-clipboard" }
zap-plugin-websearch = { path = "../crates/zap-plugin-websearch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
open = "5"
toml = "0.8"
percent-encoding = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
enigo = { version = "0.6", features = ["x11rb", "wayland"] }
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
enigo = "0.6"
arboard = "3"
