[package]
name = "zap-plugin-apps"
version = "0.1.0"
edition = "2021"

[dependencies]
zap-core = { path = "../zap-core" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
compact_str = { version = "0.8", features = ["serde"] }
nucleo-matcher = "0.3"
parking_lot = "0.12"
dirs = "6"
rmp-serde = "1"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
