[package]
name = "zap-plugin-clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
zap-core = { path = "../zap-core" }
arboard = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
nucleo-matcher = "0.3"
dirs = "6"
anyhow = "1"
log = "0.4"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
