[package]
name = "zap-plugin-clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
zap-core = { path = "../zap-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
anyhow = "1"
log = "0.4"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"
